--- a/src/components/foooter/footer.module.css
+++ b/src/components/foooter/footer.module.css
@@ -1,12 +1,9 @@
-.row {
-    margin-top: 60em;
-
-}
-
-.col {
+.div {
     background-color: #000000;
     color: #FFFFFF;
     text-align: center;
     font-size: 1.3em;
+    width: 100%;
+    height: 2em;
 
 }
