--- a/src/components/estatusOperadores/estatusOperadores.module.css
+++ b/src/components/estatusOperadores/estatusOperadores.module.css
@@ -13,3 +13,36 @@
     border-radius: 1em;
 
 }
+
+.colTitle {
+    background-color: #6c757c;
+    color: #FFFFFF;
+    text-align: center;
+    border-radius: 1em;
+
+}
+
+.colBody {
+    justify-content: center;
+    text-align: center;
+}
+
+.card {
+    justify-content: center;
+    text-align: center;
+    background-color: #6c757c;
+    border-radius: 1em;
+    margin-bottom: 1em;
+    margin-right: 0.3em;
+}
+
+.cardBody {
+    background-color: white;
+    color: #000000;
+    font-size: 1.2em;   
+    font-weight: 500;
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 0.5em;
+    border-radius: 0.5em;
+}
