--- a/src/components/login/login.module.css
+++ b/src/components/login/login.module.css
@@ -24,7 +24,7 @@
         padding: 0 0 20px;
         text-align: center;
         font-size: 3.6em !important;
-        font-family: brush script MT;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
     
     .LoginBoxLabel {
