--- a/src/components/estatusOperadores/estatusOperadores.module.css
+++ b/src/components/estatusOperadores/estatusOperadores.module.css
@@ -28,21 +28,60 @@
 }
 
 .card {
+    background-color: #6c757c;
     justify-content: center;
     text-align: center;
-    background-color: #6c757c;
     border-radius: 1em;
+    border-style: solid;
+    border-color: #6c757c;
+    border-width: 1em;
     margin-bottom: 1em;
-    margin-right: 0.3em;
 }
 
-.cardBody {
+@media only screen and (min-width: 767px) {
+    .card {
+      margin-right: 1em;
+    }
+  }
+
+.rowImgName{
+    border-radius: 1em;
     background-color: white;
+}
+
+.cardImg {
+    align-items: center;
+    width: 10em;
+    border-radius: 10em;
+    border-style: solid;
+    border-color: white;
+    border-width: 0.4em;
+}
+
+.cardName {
     color: #000000;
-    font-size: 1.2em;   
     font-weight: 500;
     text-align: center;
     justify-content: center;
-    margin-bottom: 0.5em;
-    border-radius: 0.5em;
+}
+
+.rowReporte{
+    text-align: right;
+    border-radius: 1em;
+    background-color: white;
+    color: #6c757c;
+}
+
+.rowTimeOnline{
+    text-align: right;
+    border-radius: 1em;
+    background-color: white;
+    color: #6c757c;
+}
+
+.rowTimeOffline{
+    text-align: right;
+    border-radius: 1em;
+    background-color: white;
+    color: #6c757c;
 }
