--- a/src/components/estatusColaboradores/estatusColaboradores.module.css
+++ b/src/components/estatusColaboradores/estatusColaboradores.module.css
@@ -11,5 +11,91 @@
     color: #FFFFFF;
     text-align: center;
     border-radius: 1em;
+}
 
+.card {
+    background-color: #6c757c;
+    justify-content: center;
+    text-align: center;
+    border-radius: 1em;
+    border-style: solid;
+    border-color: #6c757c;
+    border-width: 1em;
+    margin-bottom: 1em;
+}
+
+@media only screen and (min-width: 767px) {
+    .card {
+      margin-right: 1em;
+    }
+  }
+
+.rowImgName{
+    border-radius: 1em;
+    background-color: white;
+}
+
+.cardImg {
+    align-items: center;
+    width: 10em;
+    border-radius: 10em;
+    border-style: solid;
+    border-color: white;
+    border-width: 0.3em;
+}
+
+.cardName {
+    color: #000000;
+    font-weight: 500;
+    text-align: center;
+    justify-content: center;
+}
+
+.rowEstacion{
+    text-align: center;
+    border-radius: 1em;
+    border-style: solid;
+    border-color: #6c757c;
+    border-width: 0.5em;
+    background-color: white;
+    color: #6c757c;
+}
+
+.rowPausa{
+    text-align: right;
+    border-radius: 1em;
+    background-color: white;
+}
+
+.rowCliente{
+    text-align: center;
+    border-radius: 1em;
+    background-color: white;
+}
+
+.Offlinecard {
+    background-color: #6c757c;
+    justify-content: center;
+    text-align: center;
+    border-radius: 1em;
+    border-style: solid;
+    border-color: #6c757c;
+    border-width: 1em;
+    margin-bottom: 1em;
+    color: white;
+}
+
+@media only screen and (min-width: 767px) {
+    .Offlinecard {
+      margin-right: 1em;
+    }
+  }
+
+  .offlineImg {
+    align-items: center;
+    width: 10em;
+    border-radius: 10em;
+    border-style: solid;
+    border-color: #6c757c;
+    border-width: 0.4em;
 }
