--- a/src/components/estatusOperadores/estatusOperadores.module.css
+++ b/src/components/estatusOperadores/estatusOperadores.module.css
@@ -2,23 +2,10 @@
     background-color: #6c757c;
     color: #FFFFFF;
     text-align: center;
-    border-radius: 1em;
-
-}
-
-.colSubTitle {
-    background-color: #6c757c;
-    color: #FFFFFF;
-    text-align: center;
-    border-radius: 1em;
-
-}
-
-.colTitle {
-    background-color: #6c757c;
-    color: #FFFFFF;
-    text-align: center;
-    border-radius: 1em;
+    border-style: solid;
+    border-color: #3c3f40;
+    border-width: 1em;
+    border-radius: 1.6em;
 
 }
 
@@ -36,7 +23,7 @@
     border-color: #6c757c;
     border-width: 1em;
     margin-bottom: 1em;
-}
+} 
 
 @media only screen and (min-width: 767px) {
     .card {
