--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -2,9 +2,10 @@
     background-color: #111;
     color: #FFFFFF;
     text-align: center;
+    vertical-align: middle;
     font-size: 1.3em;
-    width: 99.9%;
-    height: 2em;
+    width: 100%;
+    height: 2.4em;
     position: absolute;
-    margin-top: 75%;
+    bottom: 0;
 }
