--- a/src/components/cantidadDeTurnos/cantidadDeTurnos.module.css
+++ b/src/components/cantidadDeTurnos/cantidadDeTurnos.module.css
@@ -6,7 +6,6 @@
     border-color: #3c3f40;
     border-width: 1em;
     border-radius: 1.6em;
-
 }
 
 .colBody {
@@ -14,10 +13,28 @@
     text-align: center;
 }
 
-.card {
+.cardGray {
     justify-content: center;
     text-align: center;
     background-color: #6c757c;
+    border-radius: 1em;
+    margin-bottom: 2em;
+    margin-right: 1.5em;
+}
+
+.cardYellow {
+    justify-content: center;
+    text-align: center;
+    background-color: #ffc107;
+    border-radius: 1em;
+    margin-bottom: 2em;
+    margin-right: 1.5em;
+}
+
+.cardRed {
+    justify-content: center;
+    text-align: center;
+    background-color: #dc3545;
     border-radius: 1em;
     margin-bottom: 2em;
     margin-right: 1.5em;
