--- a/src/components/estacionesCards/estacionesCards.module.css
+++ b/src/components/estacionesCards/estacionesCards.module.css
@@ -108,7 +108,7 @@
     border-radius: 4.5em;
     border-style: solid;
     border-color: white;
-    border-width: 1.5em;
+    border-width: 1em;
 }
 
 .cardName {
@@ -122,7 +122,7 @@
     text-align: center;
     border-radius: 1em;
     border-style: solid;
-    border-color: #6c757c;
+    border-color: #000000;
     border-width: 0em;
     background-color: white;
     color: #6c757c;
@@ -138,4 +138,24 @@
     text-align: center;
     border-radius: 1em;
     background-color: white;
+}
+
+.cardImgOffline {
+    align-items: center;
+    width: 9em;
+    height: 9em;
+    object-fit: cover;
+    border-radius: 4.5em;
+    border-style: solid;
+    border-color: white;
+    border-width: 1.5em;
+
+    filter: opacity(50%) grayscale(100%);
+}
+
+.cardNameOffline {
+    color: rgb(197, 197, 197);
+    font-weight: 500;
+    text-align: center;
+    justify-content: center;
 }
