--- a/src/components/cantidadDeTurnos/cantidadDeTurnos.module.css
+++ b/src/components/cantidadDeTurnos/cantidadDeTurnos.module.css
@@ -20,6 +20,7 @@
     border-radius: 1em;
     margin-bottom: 1em;
     margin-right: 1.5em;
+    width: 220px !important;
 }
 
 .cardYellow {
@@ -29,6 +30,7 @@
     border-radius: 1em;
     margin-bottom: 1em;
     margin-right: 1.5em;
+    width: 220px !important;
 }
 
 .cardRed {
@@ -38,6 +40,7 @@
     border-radius: 1em;
     margin-bottom: 1em;
     margin-right: 1.5em;
+    width: 220px !important;
 }
 
 .cardBody {
