--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,51 @@ body{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     text-decoration: none;
 }
+
+/*--------------------------------------------------------------
+>>> Navbar
+----------------------------------------------------------------*/
+
+.Navbar {
+    margin-bottom: 0px !important;
+    background-color: black !important;
+    display: block !important;
+    padding: 2px !important;
+
+  }
+
+  .NavbarBrand {
+    font-size: 2em !important;
+    font-weight: 500;
+    color: white !important;
+    cursor: pointer;
+  }
+  
+  .Nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .navLink {
+    font-size: 2em !important;
+    color: #818181 !important;
+  }
+
+  .navLink:hover {
+    color: white !important;
+    transform: scale(1.05);
+  }
+
+  #navDropDown{
+    font-size: 2em !important;
+    color: #818181 !important;
+  }
+
+  .dropDownItem {
+    font-size: 1.5em !important;
+    color: #818181 !important;
+  }
+  .dropDownItem:hover {
+    color: white !important;
+  }
