--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,9 @@
-
 /* font size 65.25% = 10 px, 1 em = 10px */
 
-html{
-    text-decoration: none; 
-    font-size: 65.25%; 
-}
 
-body{
+body {
     background-color: #3c3f40 !important;
-    margin:0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -20,45 +15,57 @@ body{
 ----------------------------------------------------------------*/
 
 .Navbar {
-    margin-bottom: 0px !important;
     background-color: black !important;
-    display: block !important;
-    padding: 2px !important;
+    padding: 0px !important;
+    vertical-align: middle !important;
+    display: flex;
+}
 
-  }
-
-  .NavbarBrand {
-    font-size: 2em !important;
+.NavbarBrand {
+    font-size: 1.5em !important;
     font-weight: 500;
     color: white !important;
     cursor: pointer;
-  }
-  
-  .Nav {
+}
+
+.Nav {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .navLink {
-    font-size: 2em !important;
-    color: #818181 !important;
-  }
+}
 
-  .navLink:hover {
-    color: white !important;
-    transform: scale(1.05);
-  }
-
-  #navDropDown{
-    font-size: 2em !important;
-    color: #818181 !important;
-  }
-
-  .dropDownItem {
+.navLink {
     font-size: 1.5em !important;
     color: #818181 !important;
-  }
-  .dropDownItem:hover {
+}
+
+.navLink:hover {
     color: white !important;
-  }
+    transform: scale(1.05);
+}
+
+#navDropDown {
+    font-size: 2em !important;
+    color: #818181 !important;
+}
+
+.dropDownItem {
+    font-size: 1.5em !important;
+    color: #818181 !important;
+}
+
+.dropDownItem:hover {
+    color: white !important;
+}
+
+@media screen and (max-width: 767px) {
+    .NavbarBrand {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .containerfk {
+        display: none;
+    }
+}
